// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input 1`] = `
<input
  onBlur={[Function]}
  onChange={[Function]}
  value=""
/>
`;

exports[`Textarea 1`] = `
<textarea
  onBlur={[Function]}
  onChange={[Function]}
  value=""
/>
`;
